# entity-resolution-benchmarks

./: README.md
entity-py/: entity.py  entity_duck.py  test_entity.py
entity-rust/: Cargo.toml
entity-rust/src/: lib.rs  main.rs
