[package]
name = "entity-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
edit-distance = "2.1.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
